--- a/translations/de.po
+++ b/translations/de.po
@@ -19,236 +19,249 @@
 #  activitystream_twitter.module,v 1.4 2008/08/12 06:02:03 akalsey
 #  activitystream_feed.module,v 1.4 2008/08/12 06:02:03 akalsey
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PROJECT VERSION\n"
+"Project-Id-Version: activitystream.module,v 1.4 2008/08/12\n"
 "POT-Creation-Date: 2009-10-05 16:36+0200\n"
-"PO-Revision-Date: YYYY-mm-DD HH:MM+ZZZZ\n"
-"Last-Translator: NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2009-10-05 19:46+0100\n"
+"Last-Translator: Thomas Zahreddin <thomas@voicehero.net>\n"
+"Language-Team: German <tz@it-arts.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+"Plural-Forms: nplurals=2; plural= (n!=1);\n"
+"X-Poedit-Language: German\n"
+"X-Poedit-Country: Germany\n"
+"X-Poedit-SourceCharset: utf-8\n"
 
-#: activitystream.module:50;59;182;532 activitystream.info:0 activitystream_delicious/activitystream_delicious.info:0 activitystream_digg/activitystream_digg.info:0 activitystream_feed/activitystream_feed.info:0 activitystream_flickr/activitystream_flickr.info:0 activitystream_lastfm/activitystream_lastfm.info:0 activitystream_twitter/activitystream_twitter.info:0
+#: activitystream.module:50;59;182;532
+#: activitystream.info:0
+#: activitystream_delicious/activitystream_delicious.info:0
+#: activitystream_digg/activitystream_digg.info:0
+#: activitystream_feed/activitystream_feed.info:0
+#: activitystream_flickr/activitystream_flickr.info:0
+#: activitystream_lastfm/activitystream_lastfm.info:0
+#: activitystream_twitter/activitystream_twitter.info:0
 msgid "Activity Stream"
-msgstr ""
+msgstr "Activity Stream"
 
 #: activitystream.module:51
 msgid "Administer settings for activity feeds"
-msgstr ""
+msgstr "Feeds konfigurieren"
 
 #: activitystream.module:74
 msgid "Activity Stream Item"
-msgstr ""
+msgstr "Aktivität in Activity Stream"
 
 #: activitystream.module:76;77
 msgid "A node type to contain items from your activity stream. You shouldn't create these nodes directly."
-msgstr ""
+msgstr "Einen Inhaltstyp der die Nachrichten Ihres Nachrichtenstroms aufnimmt. Beiträge dieses Inhaltstyps dürfen nicht direkt erstellt werden."
 
 #: activitystream.module:78
 msgid "Body"
-msgstr ""
+msgstr "Textkörper"
 
 #: activitystream.module:182
 msgid "Home"
-msgstr ""
+msgstr "Startseite"
 
 #: activitystream.module:300
 msgid "There are no activities to show."
-msgstr ""
+msgstr "Keine Aktivitäten anzuzeigen."
 
 #: activitystream.module:343
 msgid "Title"
-msgstr ""
+msgstr "Titel"
 
 #: activitystream.module:345
 msgid "The title of the Activiy Stream in blocks and User Profiles."
-msgstr ""
+msgstr "Ein Titel für Ihre Nachrichten in Blöcken und im Benutzerprofil."
 
 #: activitystream.module:449
 msgid "Added %title from %name"
-msgstr ""
+msgstr "%title von %name hinzugefügt"
 
 #: activitystream.module:452
 msgid "Updated %title from %name"
-msgstr ""
+msgstr "%title von %name aktualisiert"
 
 #: activitystream.module:476
 msgid "Activity Stream: Source"
-msgstr ""
+msgstr "Quelle für Nachrichten"
 
 #: activitystream.module:478
 msgid "Source"
-msgstr ""
+msgstr "Quelle"
 
 #: activitystream.module:482
 msgid "Activity Stream: Icon"
-msgstr ""
+msgstr "Icon für die Nachrichtenquelle"
 
 #: activitystream.module:484
 msgid "Icon"
-msgstr ""
+msgstr "Icon"
 
 #: activitystream.module:488
 msgid "Activity Stream: Link"
-msgstr ""
+msgstr "Link zur Nachrichtenquelle"
 
 #: activitystream.module:490
 msgid "Link"
-msgstr ""
+msgstr "Link"
 
 #: activitystream.module:496
 msgid "Activity Stream: Type"
-msgstr ""
+msgstr "Typ der Nachrichten für Activity Stream"
 
 #: activitystream.module:501
 msgid "Include or exclude streams of the selected types."
-msgstr ""
+msgstr "Ausgewählte Nachrichten ein- oder ausschließen. "
 
 #: activitystream.module:562
 msgid "Displays the activity stream for Delicious only."
-msgstr ""
+msgstr "Nachrichten von Delicious anzeigen."
 
 #: activitystream.module:624
 msgid "Displays the activity stream for Digg only."
-msgstr ""
+msgstr "Nachrichten von Digg anzeigen."
 
 #: activitystream.module:685
 msgid "Displays the activity stream for Twitter only."
-msgstr ""
+msgstr "Nachrichten von Twitter anzeigen."
 
 #: activitystream.install:61
 msgid "Table installation for the Activity Stream module was unsuccessful. The tables may need to be installed by hand. See the activitystream.install file for a list of the installation queries."
-msgstr ""
+msgstr "Das Anlegen der Tabellen für das Modul Activity Strem ist misslungen. Die Informationen dazu sind in der Datei activitystream.install."
 
 #: activitystream.info:0
 msgid "Activity Stream Core"
-msgstr ""
+msgstr "Basis von Activity Stream"
 
 #: activitystream.info:0
 msgid "Core API module for Activity Streams"
-msgstr ""
+msgstr "Basis API für Activity Stream"
 
 #: activitystream_delicious/activitystream_delicious.module:44
 msgid "Del.icio.us settings"
-msgstr ""
+msgstr "Konfiguration für del.icio.us"
 
-#: activitystream_delicious/activitystream_delicious.module:47 activitystream_digg/activitystream_digg.module:45 activitystream_flickr/activitystream_flickr.module:86 activitystream_lastfm/activitystream_lastfm.module:45 activitystream_twitter/activitystream_twitter.module:51
+#: activitystream_delicious/activitystream_delicious.module:47
+#: activitystream_digg/activitystream_digg.module:45
+#: activitystream_flickr/activitystream_flickr.module:86
+#: activitystream_lastfm/activitystream_lastfm.module:45
+#: activitystream_twitter/activitystream_twitter.module:51
 msgid "Username"
-msgstr ""
+msgstr "Benutzername"
 
 #: activitystream_delicious/activitystream_delicious.module:49
 msgid "The username for your Del.icio.us account"
-msgstr ""
+msgstr "Ihr Benutzername bei Del.icio.us"
 
 #: activitystream_delicious/activitystream_delicious.info:0
 msgid "Delicious Bookmarks"
-msgstr ""
+msgstr "Lesezeichen bei Delicious"
 
 #: activitystream_delicious/activitystream_delicious.info:0
 msgid "Your links on Delicious"
-msgstr ""
+msgstr "Ihr Link bei del.icio.us"
 
 #: activitystream_digg/activitystream_digg.module:42
 msgid "Digg settings"
-msgstr ""
+msgstr "Einstellungen für digg"
 
 #: activitystream_digg/activitystream_digg.module:47
 msgid "Your digg username"
-msgstr ""
+msgstr "Geben Sie Ihren Benutzernamen bei digg ein."
 
 #: activitystream_digg/activitystream_digg.info:0
 msgid "Digg"
-msgstr ""
+msgstr "Digg"
 
 #: activitystream_digg/activitystream_digg.info:0
 msgid "What's been Dugg"
-msgstr ""
+msgstr "Digg einbinden"
 
 #: activitystream_feed/activitystream_feed.module:57
 msgid "Feed settings"
-msgstr ""
+msgstr "Newsfeed-Einstellungen"
 
 #: activitystream_feed/activitystream_feed.module:60
 msgid "Feed URL"
-msgstr ""
+msgstr "URL zu einem Newsfeed."
 
 #: activitystream_feed/activitystream_feed.module:63
 msgid "URL of the feeds to import as an activity stream. Multiple feeds are allowed; place each on a seperate line."
-msgstr ""
+msgstr "URL für Newsfeeds die importiert werden sollen. Mehrere Newsfeeds sind möglich, jeder wird in einer separaten Zeile angegeben."
 
 #: activitystream_feed/activitystream_feed.info:0
 msgid "Feed stream"
-msgstr ""
+msgstr "Nachrichten aus einem Newsfeed"
 
 #: activitystream_feed/activitystream_feed.info:0
 msgid "Pull in updates from any feed, includes the favicon"
-msgstr ""
+msgstr "Aktualisierungen von Newsfeeds inkl. der Favicons"
 
 #: activitystream_flickr/activitystream_flickr.module:53
 msgid "Flickr"
-msgstr ""
+msgstr "Flickr"
 
 #: activitystream_flickr/activitystream_flickr.module:54
 msgid "Flickr API settings."
-msgstr ""
+msgstr "Einstellungen für Flickr"
 
 #: activitystream_flickr/activitystream_flickr.module:61
 msgid "API Key"
-msgstr ""
+msgstr "API-Schlüssel"
 
 #: activitystream_flickr/activitystream_flickr.module:62
 msgid "Your Flickr API Key"
-msgstr ""
+msgstr "Ihr Flickr API key"
 
 #: activitystream_flickr/activitystream_flickr.module:83
 msgid "Flickr settings"
-msgstr ""
+msgstr "Einstellungen für Flickr"
 
 #: activitystream_flickr/activitystream_flickr.module:88
 msgid "The username for your Flickr account"
-msgstr ""
+msgstr "Benutzername Ihres Flickr-Kontos"
 
 #: activitystream_flickr/activitystream_flickr.info:0
 msgid "Flickr Stream"
-msgstr ""
+msgstr "Nachrichten von Flickr"
 
 #: activitystream_flickr/activitystream_flickr.info:0
 msgid "Your activity on Flickr"
-msgstr ""
+msgstr "Ihre Aktivitäten auf Flickr."
 
 #: activitystream_lastfm/activitystream_lastfm.module:42
 msgid "lastfm settings"
-msgstr ""
+msgstr "Einstellungen für lastfm"
 
 #: activitystream_lastfm/activitystream_lastfm.module:47
 msgid "The username for your lastfm account"
-msgstr ""
+msgstr "Benutzername Ihres last.fm-Kontos"
 
 #: activitystream_lastfm/activitystream_lastfm.info:0
 msgid "Last.fm"
-msgstr ""
+msgstr "Last.fm"
 
 #: activitystream_lastfm/activitystream_lastfm.info:0
 msgid "What you're listening to"
-msgstr ""
+msgstr "Last.fm einbinden"
 
 #: activitystream_twitter/activitystream_twitter.module:48
 msgid "Twitter settings"
-msgstr ""
+msgstr "Einstellungen für twitter"
 
 #: activitystream_twitter/activitystream_twitter.module:53
 msgid "The username for your Twitter account"
-msgstr ""
+msgstr "Benutzername Ihres twitter-Kontos"
 
 #: activitystream_twitter/activitystream_twitter.info:0
 msgid "Twitter"
-msgstr ""
+msgstr "Twitter"
 
 #: activitystream_twitter/activitystream_twitter.info:0
 msgid "Public Twitter tweets"
-msgstr ""
+msgstr "Öffentliche Nachrichten auf Twitter"
 
